configured cdx/cbs links for login and user profile menu

--- a/manifest-vars.test.yml
+++ b/manifest-vars.test.yml
@@ -5,3 +5,4 @@ memory: 1024M
 inactivityDurationCheckoutMinutes: 5
 refreshTokenRateMinutes: 3
 inactivityDurationLogoutMinutes: 5
+cdxBaseUrl: test.epacdx.net
