--- a/manifest-vars.yml
+++ b/manifest-vars.yml
@@ -17,9 +17,9 @@ googleAnalyticsAuthenticatedContainerId: "GTM-W55ZK7"
 email: ecmps-beta@camdsupport.com
 refreshEvalStatusRateSeconds: 1
 cbsBaseUrl: camd.epa.gov
-cbsManageDelegationsPath: CBS/login/auth
+cbsManageDelegationsPath: "/CBS/login/auth"
 cdxBaseUrl: dev.epacdx.net
-cdxForgotUsernamePath: AccountRecovery/ForgotUserId
-cdxForgotPasswordPath: PasswordReset/GetResetCode
-cdxRegisterPath: Registration/Terms
+cdxForgotUsernamePath: "/AccountRecovery/ForgotUserId"
+cdxForgotPasswordPath: "/PasswordReset/GetResetCode"
+cdxRegisterPath: "/Registration/Terms"
 enableManageDelegations: "false"
