--- a/manifest.yml
+++ b/manifest.yml
@@ -18,11 +18,11 @@ applications:
       REACT_APP_EASEY_ECMPS_UI_EMAIL: ((email))
       REACT_APP_EASEY_ECMPS_UI_REFRESH_EVAL_STATUS_RATE_SECONDS: ((refreshEvalStatusRateSeconds))
       REACT_APP_EASEY_ECMPS_UI_CBS_BASE_URL: https://((cbsBaseUrl))
-      REACT_APP_EASEY_ECMPS_UI_CBS_MANAGE_DELEGATIONS_PATH: /((cbsManageDelegationsPath))
+      REACT_APP_EASEY_ECMPS_UI_CBS_MANAGE_DELEGATIONS_PATH: ((cbsManageDelegationsPath))
       REACT_APP_EASEY_ECMPS_UI_CDX_BASE_URL: https://((cdxBaseUrl))
-      REACT_APP_EASEY_ECMPS_UI_CDX_FORGOT_USERNAME_PATH: /((cdxForgotUsernamePath))
-      REACT_APP_EASEY_ECMPS_UI_CDX_FORGOT_PASSWORD_PATH: /((cdxForgotPasswordPath))
-      REACT_APP_EASEY_ECMPS_UI_CDX_REGISTER_PATH: /((cdxRegisterPath))
+      REACT_APP_EASEY_ECMPS_UI_CDX_FORGOT_USERNAME_PATH: ((cdxForgotUsernamePath))
+      REACT_APP_EASEY_ECMPS_UI_CDX_FORGOT_PASSWORD_PATH: ((cdxForgotPasswordPath))
+      REACT_APP_EASEY_ECMPS_UI_CDX_REGISTER_PATH: ((cdxRegisterPath))
       REACT_APP_EASEY_ECMPS_UI_ENABLE_MANAGE_DELEGATIONS: ((enableManageDelegations))
       REACT_APP_EASEY_ECMPS_UI_INACTIVITY_DURATION_CHECKOUT_MINUTES: ((inactivityDurationCheckoutMinutes))
       REACT_APP_EASEY_ECMPS_UI_ACTIVITY_POLLING_FREQUENCY_SECONDS: ((activityPollingFrequencySeconds))
