adding-base-urls-to-other-envs-and-renaming-user-id-var

--- a/manifest-vars.test.yml
+++ b/manifest-vars.test.yml
@@ -6,3 +6,4 @@ inactivityDurationCheckoutMinutes: 5
 refreshTokenRateMinutes: 3
 inactivityDurationLogoutMinutes: 5
 cdxBaseUrl: test.epacdx.net
+cbsBaseUrl: camd.epa.gov
