--- a/manifest-vars.staging.yml
+++ b/manifest-vars.staging.yml
@@ -5,3 +5,5 @@ memory: 2048M
 inactivityDurationCheckoutMinutes: 20
 refreshTokenRateMinutes: 15
 inactivityDurationLogoutMinutes: 20
+cdxBaseUrl: test.epacdx.net
+cbsBaseUrl: camd.epa.gov
