adding timeout for refresh eval status loop

--- a/manifest-vars.staging.yml
+++ b/manifest-vars.staging.yml
@@ -7,3 +7,4 @@ refreshTokenRateMinutes: 15
 inactivityDurationLogoutMinutes: 20
 cdxBaseUrl: test.epacdx.net
 cbsBaseUrl: camd.epa.gov
+refreshEvalStatusTimeoutMinutes: 15
