--- a/manifest-vars.test.yml
+++ b/manifest-vars.test.yml
@@ -7,3 +7,4 @@ refreshTokenRateMinutes: 3
 inactivityDurationLogoutMinutes: 5
 cdxBaseUrl: test.epacdx.net
 cbsBaseUrl: camd.epa.gov
+refreshEvalStatusTimeoutMinutes: 15
