--- a/manifest-vars.beta.yml
+++ b/manifest-vars.beta.yml
@@ -8,3 +8,4 @@ inactivityDurationLogoutMinutes: 20
 googleAnalyticsEnabled: "true"
 cdxBaseUrl: test.epacdx.net
 cbsBaseUrl: camd.epa.gov
+refreshEvalStatusTimeoutMinutes: 15
