--- a/manifest-vars.prod.yml
+++ b/manifest-vars.prod.yml
@@ -10,3 +10,4 @@ googleAnalyticsPublicContainerId: "GTM-L8ZB"
 cdxBaseUrl: cdx.epa.gov
 enableManageDelegations: "true"
 cbsBaseUrl: camd.epa.gov
+refreshEvalStatusTimeoutMinutes: 15
