--- a/manifest.yml
+++ b/manifest.yml
@@ -10,7 +10,7 @@ applications:
       REACT_APP_EASEY_ECMPS_UI_HOST: ((host))
       REACT_APP_EASEY_ECMPS_UI_PATH: /((path))
       REACT_APP_EASEY_MDM_API: https://((apiHost))/master-data-mgmt
-      REACT_APP_EASEY_FACILITIES_API: https://((apiHost))/facility-mgmt
+      REACT_APP_EASEY_FACILITIES_API: https://((apiHost))/facilities-mgmt
       REACT_APP_EASEY_EMISSIONS_API: https://((apiHost))/emissions-mgmt
       REACT_APP_EASEY_MONITOR_PLAN_API: https://((apiHost))/monitor-plan-mgmt
       REACT_APP_EASEY_AUTH_API: https://((apiHost))/auth-mgmt
