--- a/package.json
+++ b/package.json
@@ -1,5 +1,42 @@
 {
+  "name": "easey-ecmps-ui",
+  "version": "v0.0.0",
+  "description": "EPA CAMD ECMPS Website application",
+  "license": "MIT",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/US-EPA-CAMD/easey-ecmps-ui.git"
+  },
+  "engines": {
+    "node": "16.x"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "up": "yarn --ignore-engines && yarn start",
+    "test": "react-scripts test --coverage --watchAll=false --testResultsProcessor=jest-sonar-reporter",
+    "test:dev": "react-scripts test",
+    "dev": "react-scripts start"
+  },
+  "resolutions": {
+    "ansi-regex": "^5.0.1",
+    "browserslist": "^4.16.5",
+    "glob-parent": "^5.1.2",
+    "immer": "^9.0.6",
+    "json-schema": "^0.4.0",
+    "node-notifier": "^8.0.1",
+    "nth-check": "^2.0.1",
+    "object-path": "^0.11.8",
+    "postcss": "^7.0.36",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-dev-utils": "^11.0.4",
+    "serialize-javascript": "^3.1.0",
+    "set-value": "^4.0.1",
+    "sockjs": "^0.3.20",
+    "yargs-parser": "^13.1.2"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -37,31 +74,13 @@
     "styled-components": "^5.3.0",
     "uswds": "2.12.1"
   },
-  "resolutions": {
-    "ansi-regex": "^5.0.1",
-    "browserslist": "^4.16.5",
-    "glob-parent": "^5.1.2",
-    "immer": "^9.0.6",
-    "json-schema": "^0.4.0",
-    "node-notifier": "^8.0.1",
-    "nth-check": "^2.0.1",
-    "object-path": "^0.11.8",
-    "postcss": "^7.0.36",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-dev-utils": "^11.0.4",
-    "serialize-javascript": "^3.1.0",
-    "set-value": "^4.0.1",
-    "sockjs": "^0.3.20",
-    "yargs-parser": "^13.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "up": "yarn --ignore-engines && yarn start",
-    "test": "react-scripts test --coverage --watchAll=false --testResultsProcessor=jest-sonar-reporter",
-    "test:dev": "react-scripts test",
-    "dev": "react-scripts start"
+  "devDependencies": {
+    "autoprefixer": "^9.8.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "jest-enzyme": "^7.1.2",
+    "jest-sonar-reporter": "^2.0.0",
+    "react-test-renderer": "^16.13.1"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -77,14 +96,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "jest-enzyme": "^7.1.2",
-    "jest-sonar-reporter": "^2.0.0",
-    "react-test-renderer": "^16.13.1"
   },
   "jest": {
     "collectCoverageFrom": [
