--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "axios-mock-adapter": "^1.18.2",
     "axios-retry": "^3.1.8",
     "html-react-parser": "^1.4.4",
+    "lodash": "^4.17.21",
     "loglevel": "^1.7.0",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
