--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "yargs-parser": "^13.1.2"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -63,7 +64,6 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-gtm-module": "^2.0.11",
-    "react-hook-form": "^6.3.1",
     "react-pdf": "^5.3.2",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
@@ -76,7 +76,8 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.36.0",
     "styled-components": "^5.3.0",
-    "uswds": "2.13.0"
+    "uswds": "2.13.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
