--- a/.github/workflows/feature-branch.yml
+++ b/.github/workflows/feature-branch.yml
@@ -4,7 +4,10 @@ on:
   pull_request:
     branches: [ develop, release/* ]
     paths-ignore:
-      - '.github/**'
+    - '**/*.md'
+    - 'LICENSE'
+    - '.github/**'
+    - '.gitignore'
 
 jobs:
   Build-Test:
