--- a/manifest-vars.beta.yml
+++ b/manifest-vars.beta.yml
@@ -1,7 +1,7 @@
+instances: 2
+environment: beta
 host: easey-beta.app.cloud.gov
 apiHost: api.epa.gov/easey/beta
-environment: beta
-memory: 2048M
 inactivityDurationCheckoutMinutes: 20
 refreshTokenRateMinutes: 15
 inactivityDurationLogoutMinutes: 20
