--- a/manifest-vars.yml
+++ b/manifest-vars.yml
@@ -1,10 +1,13 @@
 #THIS FILE SHOULD CONTAIN DEV SETTINGS AND CI/CD WORKFLOW WILL CHANGE SETTINGS BASED ON ENV
 name: ecmps-ui
 path: ecmps
+memory: 2048
+heap: 1536
+disk: 2048
+instances: 1
+environment: development
 host: easey-dev.app.cloud.gov
 apiHost: api.epa.gov/easey/dev
-environment: development
-memory: 1024M
 inactivityDurationCheckoutMinutes: 2
 activityPollingFrequencySeconds: 1
 activityCountdownDurationSeconds: 30
