--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,14 @@
 applications:
   - name: ((name))
-    memory: ((memory))
+    memory: ((memory))M
+    disk_quota: ((disk))M
+    instances: ((instances))
     buildpacks:
       - nodejs_buildpack
     env:
       OPTIMIZE_MEMORY: true
       PUBLIC_URL: https://((host))/((path))
+      NODE_OPTIONS: --max-old-space-size=((heap))
       REACT_APP_EASEY_ECMPS_UI_ENV: ((environment))
       REACT_APP_EASEY_ECMPS_UI_HOST: ((host))
       REACT_APP_EASEY_ECMPS_UI_PATH: /((path))
