--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easey-ecmps-ui",
-  "version": "v0.0.0",
+  "version": "0.0.0",
   "description": "EPA CAMD ECMPS Website application",
   "license": "MIT",
   "private": true,
