--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,6 +19,7 @@ sonar.exlusions=logo.svg,uswds_assets/**/*,src/App.js,src/config.js,src/serviceW
 
 sonar.tests=src
 sonar.test.inclusions=src/**/*.test.js,src/**/*.test.jsx
+sonar.coverage.exclusions=src/config.js,src/serviceWorker.js,src/store/configureStore.dev.js
 
 sonar.javascript.file.suffixes=.js,.jsx
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
