--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,8 @@
 /starter-kit/facilities-api/coverage
 # misc
 .DS_Store
-#.env.local
-#.env.development.local
-#.env.test.local
-#.env.production.local
+.env
+.env.*
 
 npm-debug.log*
 
