--- a/manifest-vars.prod.yml
+++ b/manifest-vars.prod.yml
@@ -1,7 +1,7 @@
+instances: 2
+environment: production
 host: easey.app.cloud.gov
 apiHost: api.epa.gov/easey
-environment: production
-memory: 2048M
 inactivityDurationCheckoutMinutes: 20
 refreshTokenRateMinutes: 15
 inactivityDurationLogoutMinutes: 20
