--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss": "^7.0.36",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-overlay": "6.0.9",
     "react-dev-utils": "^11.0.4",
     "serialize-javascript": "^3.1.0",
     "set-value": "^4.0.1",
@@ -85,7 +86,8 @@
     "enzyme-adapter-react-16": "^1.15.4",
     "jest-enzyme": "^7.1.2",
     "jest-sonar-reporter": "^2.0.0",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "react-error-overlay": "6.0.9"
   },
   "eslintConfig": {
     "extends": "react-app"
