--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.18.2",
     "axios-retry": "^3.1.8",
+    "downloadjs": "^1.4.7",
     "html-react-parser": "^1.4.4",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
@@ -86,8 +87,8 @@
     "enzyme-adapter-react-16": "^1.15.4",
     "jest-enzyme": "^7.1.2",
     "jest-sonar-reporter": "^2.0.0",
-    "react-test-renderer": "^16.13.1",
-    "react-error-overlay": "6.0.9"
+    "react-error-overlay": "6.0.9",
+    "react-test-renderer": "^16.13.1"
   },
   "eslintConfig": {
     "extends": "react-app"
