--- a/manifest.yml
+++ b/manifest.yml
@@ -17,6 +17,7 @@ applications:
       REACT_APP_EASEY_MONITOR_PLAN_API: https://((apiHost))/monitor-plan-mgmt
       REACT_APP_EASEY_AUTH_API: https://((apiHost))/auth-mgmt
       REACT_APP_EASEY_QUARTZ_API: https://((apiHost))/quartz-mgmt
+      REACT_APP_EASEY_CONTENT_API: https://((apiHost))/content-mgmt
       REACT_APP_EASEY_ECMPS_UI_SUPPORT_EMAIL: ((email))
       REACT_APP_EASEY_ECMPS_UI_REFRESH_EVAL_STATUS_RATE_SECONDS: ((refreshEvalStatusRateSeconds))
       REACT_APP_EASEY_ECMPS_UI_REFRESH_EVAL_STATUS_TIMEOUT_MINUTES: ((refreshEvalStatusTimeoutMinutes))
