--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "loglevel": "^1.7.0",
+    "markdown": "^0.5.0",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-countdown-circle-timer": "^2.5.3",
@@ -66,6 +67,7 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-gtm-module": "^2.0.11",
+    "react-markdown": "^8.0.0",
     "react-pdf": "^5.3.2",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
@@ -76,6 +78,7 @@
     "redux-immutable-state-invariant": "2.1.0",
     "redux-mock-store": "~1.5.4",
     "redux-thunk": "^2.3.0",
+    "remark-gfm": "^3.0.1",
     "sass": "^1.36.0",
     "styled-components": "^5.3.0",
     "uswds": "2.13.0",
