--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.8.2",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -82,7 +84,7 @@
     "redux-thunk": "^2.3.0",
     "remark-gfm": "^3.0.1",
     "sass": "^1.36.0",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.5",
     "uswds": "2.13.0",
     "yup": "^0.32.11"
   },
