--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@mui/styled-engine-sc": "^5.8.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
+    "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/user-event": "^7.2.1",
     "@trussworks/react-uswds": "^2.4.1",
     "@us-epa-camd/easey-design-system": "1.31.0",
