--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "glob-parent": "^5.1.2",
     "immer": "^9.0.6",
     "json-schema": "^0.4.0",
+    "moment": "^2.29.4",
     "node-forge": "^1.3.0",
     "node-notifier": "^8.0.1",
     "nth-check": "^2.0.1",
@@ -40,6 +41,7 @@
     "set-value": "^4.0.1",
     "shell-quote": "^1.7.3",
     "sockjs": "^0.3.20",
+    "trim": "^0.0.3",
     "uswds": "2.13.0",
     "yargs-parser": "^13.1.2"
   },
