--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -3,6 +3,10 @@ name: Release Branch Workflow
 on:
   push:
     branches: [ release/* ]
+    paths-ignore:
+    - '**/*.md'
+    - 'LICENSE'
+    - '.gitignore'
 
 jobs:
   Build-Test-Package:
@@ -43,6 +47,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.ARTIFACTS_STORAGE_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ARTIFACTS_STORAGE_SECRET_ACCESS_KEY }}
+  
   Test-Deployment:
     needs: Build-Test-Package
     runs-on: ubuntu-latest
@@ -85,6 +90,7 @@ jobs:
       - name: Deployment
         run: |
           devops/scripts/deploy.sh
+  
   Beta-Deployment:
     needs: Build-Test-Package
     runs-on: ubuntu-latest
@@ -127,8 +133,9 @@ jobs:
       - name: Deployment
         run: |
           devops/scripts/deploy.sh
+
   Staging-Deployment:
-    needs: Test-Deployment
+    needs: Build-Test-Package
     runs-on: ubuntu-latest
     environment:
       name: Staging
