--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,11 @@
 # dependencies
-/starter-kit/app/node_modules
-/starter-kit/posts-api/node_modules
-/starter-kit/tasks-api/node_modules
-/starter-kit/facilities-api/node_modules
+/node_modules
 /.pnp
 .pnp.js
 
 # production
 /build
-/starter-kit/app/build
-/starter-kit/posts-api/build
-/starter-kit/tasks-api/dist
-/starter-kit/tasks-api/coverage
-/starter-kit/facilities-api/dist
-/starter-kit/facilities-api/coverage
+
 # misc
 .DS_Store
 .env
