--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,8 @@ http {
     index index.html index.htm;
     try_files $uri /index.html;
 
+    error_page 404 /error404.html;
+
     # Only use TLS v1.2 as Transport Security Protocol
     ssl_protocols TLSv1.2;
     
@@ -39,11 +41,11 @@ http {
     add_header Strict-Transport-Security max-age=15768000;
 
     location /dev {
-      try_files $uri /error404.html;
+      return 404;
     }
 
     location /test {
-      try_files $uri /error404.html;
+      return 404;
     }
 
     location / {
