--- a/nginx.conf
+++ b/nginx.conf
@@ -40,11 +40,11 @@ http {
     # HSTS (ngx_http_headers_module is required) (15768000 seconds = 6 months)
     add_header Strict-Transport-Security max-age=15768000;
 
-    location /dev {
+    location /ecmps/dev {
       return 404;
     }
 
-    location /test {
+    location /ecmps/test {
       return 404;
     }
 
