--- a/manifest-vars.yml
+++ b/manifest-vars.yml
@@ -1,11 +1,10 @@
 #THIS FILE SHOULD CONTAIN DEV SETTINGS AND CI/CD WORKFLOW WILL CHANGE SETTINGS BASED ON ENV
 name: ecmps-ui
-path: ecmps
 memory: 64
 disk: 2048
 instances: 1
 environment: development
-host: easey-dev.app.cloud.gov
+host: ecmps-dev.app.cloud.gov
 apiHost: api.epa.gov/easey/dev
 inactivityDurationCheckoutMinutes: 2
 activityPollingFrequencySeconds: 1
