--- a/nginx.conf
+++ b/nginx.conf
@@ -40,15 +40,15 @@ http {
     # HSTS (ngx_http_headers_module is required) (15768000 seconds = 6 months)
     add_header Strict-Transport-Security max-age=15768000;
 
-    location /ecmps/dev {
+    location /dev {
       return 404;
     }
 
-    location /ecmps/test {
+    location /test {
       return 404;
     }
 
-    location /ecmps {
+    location / {
       try_files $uri /index.html;
     }
   }
