--- a/manifest-vars.test.yml
+++ b/manifest-vars.test.yml
@@ -1,7 +1,7 @@
 instances: 1
-host: easey-tst.app.cloud.gov
-apiHost: api.epa.gov/easey/test
 environment: testing
+host: ecmps-tst.app.cloud.gov
+apiHost: api.epa.gov/easey/test
 inactivityDurationCheckoutMinutes: 5
 refreshTokenRateMinutes: 3
 inactivityDurationLogoutMinutes: 5
