--- a/manifest.yml
+++ b/manifest.yml
@@ -6,10 +6,8 @@ applications:
     buildpacks:
       - nginx_buildpack
     env:
-      PUBLIC_URL: https://((host))/((path))
       REACT_APP_EASEY_ECMPS_UI_ENV: ((environment))
       REACT_APP_EASEY_ECMPS_UI_HOST: ((host))
-      REACT_APP_EASEY_ECMPS_UI_PATH: /((path))
       REACT_APP_EASEY_MDM_API: https://((apiHost))/master-data-mgmt
       REACT_APP_EASEY_FACILITIES_API: https://((apiHost))/facilities-mgmt
       REACT_APP_EASEY_EMISSIONS_API: https://((apiHost))/emissions-mgmt
@@ -38,4 +36,4 @@ applications:
       REACT_APP_GOOGLE_ANALYTICS_AUTHENTICATED_CONTAINER_ID: ((googleAnalyticsAuthenticatedContainerId))
       REACT_APP_GOOGLE_ANALYTICS_PUBLIC_CONTAINER_ID: ((googleAnalyticsPublicContainerId))
     routes:
-      - route: ((host))/((path))
+      - route: ((host))
