--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.18.2",
     "axios-retry": "^3.1.8",
+    "dotenv": "^10.0.0",
     "downloadjs": "^1.4.7",
     "html-react-parser": "^1.4.4",
     "js-cookie": "^3.0.1",
