--- a/.github/workflows/develop-branch.yml
+++ b/.github/workflows/develop-branch.yml
@@ -17,8 +17,6 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Checkout devops repo
         uses: actions/checkout@v2
         with:
@@ -55,9 +53,10 @@ jobs:
       - name: Init Application
         run: devops/scripts/cf-app-init.sh
       - name: Configure Env Vars (secrets)
-        run: |
-          cf set-env $APP_NAME REACT_APP_ECMPS_API_KEY $REACT_APP_ECMPS_API_KEY
+        run: scripts/environment-variables-secrets.sh
         env:
-          REACT_APP_ECMPS_API_KEY: ${{ secrets.ECMPS_NON_PROD_API_KEY }}
+          ECMPS_API_KEY: ${{ secrets.API_KEY }}
+          ECMPS_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          ECMPS_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       - name: Deploy
         run: devops/scripts/deploy.sh
