--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -14,8 +14,6 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Checkout devops repo
         uses: actions/checkout@v2
         with:
@@ -57,8 +55,6 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Checkout devops repo
         uses: actions/checkout@v2
         with:
@@ -83,13 +79,13 @@ jobs:
       - name: Init Application
         run: devops/scripts/cf-app-init.sh
       - name: Configure Env Vars (secrets)
-        run: |
-          cf set-env $APP_NAME REACT_APP_ECMPS_API_KEY $REACT_APP_ECMPS_API_KEY
+        run: scripts/environment-variables-secrets.sh
         env:
-          REACT_APP_ECMPS_API_KEY: ${{ secrets.ECMPS_NON_PROD_API_KEY }}
+          ECMPS_API_KEY: ${{ secrets.API_KEY }}
+          ECMPS_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          ECMPS_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       - name: Deployment
-        run: |
-          devops/scripts/deploy.sh
+        run: devops/scripts/deploy.sh
   
   Beta-Deployment:
     needs: Build-Test-Package
@@ -100,8 +96,6 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Checkout devops repo
         uses: actions/checkout@v2
         with:
@@ -126,13 +120,13 @@ jobs:
       - name: Init Application
         run: devops/scripts/cf-app-init.sh
       - name: Configure Env Vars (secrets)
-        run: |
-          cf set-env $APP_NAME REACT_APP_ECMPS_API_KEY $REACT_APP_ECMPS_API_KEY
+        run: scripts/environment-variables-secrets.sh
         env:
-          REACT_APP_ECMPS_API_KEY: ${{ secrets.ECMPS_NON_PROD_API_KEY }}
+          ECMPS_API_KEY: ${{ secrets.API_KEY }}
+          ECMPS_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          ECMPS_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       - name: Deployment
-        run: |
-          devops/scripts/deploy.sh
+        run: devops/scripts/deploy.sh
 
   Staging-Deployment:
     needs: Build-Test-Package
@@ -143,8 +137,6 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Checkout devops repo
         uses: actions/checkout@v2
         with:
@@ -169,10 +161,10 @@ jobs:
       - name: Init Application
         run: devops/scripts/cf-app-init.sh
       - name: Configure Env Vars (secrets)
-        run: |
-          cf set-env $APP_NAME REACT_APP_ECMPS_API_KEY $REACT_APP_ECMPS_API_KEY
+        run: scripts/environment-variables-secrets.sh
         env:
-          REACT_APP_ECMPS_API_KEY: ${{ secrets.ECMPS_NON_PROD_API_KEY }}
+          ECMPS_API_KEY: ${{ secrets.API_KEY }}
+          ECMPS_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          ECMPS_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       - name: Deployment
-        run: |
-          devops/scripts/deploy.sh
+        run: devops/scripts/deploy.sh
