--- a/manifest-vars.prod.yml
+++ b/manifest-vars.prod.yml
@@ -4,8 +4,8 @@ host: ecmps.app.cloud.gov
 apiHost: api.epa.gov/easey
 inactivityDurationCheckoutMinutes: 15
 inactivityDurationLogoutMinutes: 15
-googleAnalyticsEnabled: "true"
+googleAnalyticsEnabled: true
 googleAnalyticsPublicContainerId: "GTM-L8ZB"
 cdxBaseUrl: cdx.epa.gov
-enableManageDelegations: "true"
+enableManageDelegations: true
 cbsBaseUrl: camd.epa.gov
