--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "yargs-parser": "^13.1.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
