Fixed Test Case

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "up": "yarn --ignore-engines && yarn start",
-    "test": "react-scripts test --coverage --watchAll=false --testResultsProcessor=jest-sonar-reporter",
+    "test": "react-scripts test --watch --verbose false --coverage --watchAll=true --testResultsProcessor=jest-sonar-reporter",
     "test:dev": "react-scripts test",
     "dev": "react-scripts start",
     "format": "prettier --write \"src/**/*.js\" \"src/**/*.test.js\" \"src/**/*.scss\""
