--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "export NODE_OPTIONS=--max_old_space_size=8192 && react-scripts build",
     "up": "yarn --ignore-engines && yarn start",
     "test": "react-scripts test --coverage --watchAll=false --testResultsProcessor=jest-sonar-reporter",
     "test:dev": "react-scripts test",
@@ -121,11 +121,15 @@
       "last 1 safari version"
     ]
   },
-  "jest": {
+  "jest": {   
+     "transformIgnorePatterns": [
+      "src/node_modules/(?!react-markdown)"],
+    "transform": {
+      "\\.js$": "babel-jest"
+    },
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
       "!node_modules/",
-      "!src/App.js",
       "!src/config.js",
       "!src/serviceWorker.js",
       "!src/index.js",
@@ -135,6 +139,15 @@
       "!src/store/reducers/initialState.js",
       "!src/utils/api/axiosSetup.js",
       "!src/utils/api/setupTests.js"
+    ],
+    "moduleNameMapper": {
+      "^lodash-es$": "lodash"
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "<rootDir>/src/graph/operations.ts"
     ]
+
+
   }
 }
