--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "export NODE_OPTIONS=--max_old_space_size=8192 && react-scripts build",
+    "build": " react-scripts build",
     "up": "yarn --ignore-engines && yarn start",
     "test": "react-scripts test --coverage --watchAll=false --testResultsProcessor=jest-sonar-reporter",
     "test:dev": "react-scripts test",
@@ -122,13 +122,8 @@
     ]
   },
   "jest": {   
-     "transformIgnorePatterns": [
-      "src/node_modules/(?!react-markdown)"],
-    "transform": {
-      "\\.js$": "babel-jest"
-    },
     "collectCoverageFrom": [
-      
+      "src/**/*.{js,jsx,ts,tsx}",
       "!node_modules/",
       "!src/config.js",
       "!src/serviceWorker.js",
@@ -139,15 +134,7 @@
       "!src/store/reducers/index.js",
       "!src/store/reducers/initialState.js",
       "!src/utils/api/axiosSetup.js",
-      "!src/utils/api/setupTests.js",
-      "src/**/*.{js,jsx,ts,tsx}"
-    ],
-    "moduleNameMapper": {
-      "^lodash-es$": "lodash"
-    },
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "<rootDir>/src/graph/operations.ts"
+      "!src/utils/api/setupTests.js"
     ]
 
 
