--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "react-scripts start",
     "build": " react-scripts build",
     "up": "yarn --ignore-engines && yarn start",
-    "test": "react-scripts test --coverage --watchAll=false --testResultsProcessor=jest-sonar-reporter",
+    "test": "react-scripts test --coverage --watchAll=false --testResultsProcessor=jest-sonar-reporter --env=jest-environment-jsdom-sixteen",
     "test:dev": "react-scripts test",
     "dev": "react-scripts start",
     "format": "prettier --write \"src/**/*.js\" \"src/**/*.test.js\" \"src/**/*.scss\""
@@ -101,6 +101,7 @@
     "autoprefixer": "^9.8.6",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
+    "jest-environment-jsdom-sixteen": "^2.0.0",
     "jest-enzyme": "^7.1.2",
     "jest-sonar-reporter": "^2.0.0",
     "react-error-overlay": "6.0.9",
@@ -121,7 +122,7 @@
       "last 1 safari version"
     ]
   },
-  "jest": {   
+  "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
       "!node_modules/",
@@ -136,7 +137,5 @@
       "!src/utils/api/axiosSetup.js",
       "!src/utils/api/setupTests.js"
     ]
-
-
   }
 }
