--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "@mui/material": "^5.8.2",
     "@mui/styled-engine-sc": "^5.8.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react": "12",
     "@testing-library/react-hooks": "^8.0.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/user-event": "^12.5.0",
     "@trussworks/react-uswds": "^2.4.1",
     "@us-epa-camd/easey-design-system": "1.31.0",
     "@welldone-software/why-did-you-render": "^7.0.1",
