--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "react-scripts start",
     "build": " react-scripts build",
     "up": "yarn --ignore-engines && yarn start",
-    "test": "react-scripts test --coverage --watchAll=false --testResultsProcessor=jest-sonar-reporter",
+    "test": "react-scripts test --coverage --silent=false --watchAll=true --testResultsProcessor=jest-sonar-reporter",
     "test:dev": "react-scripts test",
     "dev": "react-scripts start",
     "format": "prettier --write \"src/**/*.js\" \"src/**/*.test.js\" \"src/**/*.scss\""
@@ -121,7 +121,7 @@
       "last 1 safari version"
     ]
   },
-  "jest": {   
+  "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
       "!node_modules/",
@@ -136,7 +136,5 @@
       "!src/utils/api/axiosSetup.js",
       "!src/utils/api/setupTests.js"
     ]
-
-
   }
 }
