updating github actions to v3 and fixing yarn offline cache issue and removing console.logs

--- a/.cfignore
+++ b/.cfignore
@@ -1,8 +1,21 @@
 *.md
-.github/*
-node_modules/*
-.gitignore
+*.git*
+*.env*
+*.properties
+*.vscode*
+*.scanner*
+.eslintrc.js
+.prettierrc
+tsconfig.*
 docker-compose.yml
-Dockerfile.dev
+Dockerfile*
 LICENSE
-sonar-project.properties
+nest-cli.json
+manifest-vars.*
+test-report.xml
+coverage
+devops
+node_modules
+scripts
+src
+test
