--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -128,6 +128,47 @@ jobs:
       - name: Deployment
         run: devops/scripts/deploy.sh
 
+  Performance-Deployment:
+    needs: Build-Test-Package
+    runs-on: ubuntu-latest
+    environment:
+      name: Performance
+      url: https://ecmps-perf.app.cloud.gov
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      - name: Checkout devops repo
+        uses: actions/checkout@v3
+        with:
+          repository: US-EPA-CAMD/devops
+          path: devops
+      - name: Configure Env Vars
+        run: devops/scripts/environment-variables-noTag.sh PERF
+        env:
+          ENV_VAR_PREFIX: REACT_APP_EASEY
+      - name: Install cf cli
+        run: devops/scripts/install-cf-cli.sh
+      - name: Login to cloud.gov
+        run: devops/scripts/cf-login.sh
+        env:
+          CF_USERNAME: ${{ secrets.CF_STG_DEPLOYMENT_SVC }}
+          CF_PASSWORD: ${{ secrets.CF_STG_DEPLOYMENT_SVC_PWD }}
+      - name: Download Deployment Package
+        run: devops/scripts/download-artifact.sh
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.ARTIFACTS_STORAGE_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ARTIFACTS_STORAGE_SECRET_ACCESS_KEY }}
+      - name: Init Application
+        run: devops/scripts/cf-app-init.sh
+      - name: Configure Env Vars (secrets)
+        run: scripts/environment-variables-secrets.sh
+        env:
+          ECMPS_API_KEY: ${{ secrets.API_KEY }}
+          ECMPS_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          ECMPS_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+      - name: Deployment
+        run: devops/scripts/deploy.sh
+
   Staging-Deployment:
     needs: Build-Test-Package
     runs-on: ubuntu-latest
