--- a/manifest-vars.yml
+++ b/manifest-vars.yml
@@ -24,3 +24,4 @@ cdxForgotUserIdPath: "/AccountRecovery/ForgotUserId"
 cdxForgotPasswordPath: "/PasswordReset/GetResetCode"
 cdxRegisterPath: "/Registration/Terms"
 enableManageDelegations: "false"
+refreshLastActivityInterval: 1
