Updated manifest files
Changed env var from controlling disabling to controlling enabling

Made updates to code to reflect above change

--- a/manifest-vars.beta.yml
+++ b/manifest-vars.beta.yml
@@ -7,3 +7,4 @@ inactivityDurationLogoutMinutes: 15
 googleAnalyticsEnabled: true
 cdxBaseUrl: test.epacdx.net
 cbsBaseUrl: camd.epa.gov
+enableSystemAdminstrationModule: false
