--- a/manifest-vars.yml
+++ b/manifest-vars.yml
@@ -25,3 +25,4 @@ cdxForgotPasswordPath: "/PasswordReset/GetResetCode"
 cdxRegisterPath: "/Registration/Terms"
 enableManageDelegations: "false"
 refreshLastActivityInterval: 1
+enableSystemAdminstrationModule: true
