--- a/package.json
+++ b/package.json
@@ -73,7 +73,6 @@
     "loglevel": "^1.7.0",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
-    "react-countdown-circle-timer": "^2.5.3",
     "react-data-table-component": "^6.11.7",
     "react-data-table-component-extensions": "^1.5.2",
     "react-datepicker": "^3.7.0",
@@ -93,6 +92,7 @@
     "redux-thunk": "^2.3.0",
     "remark-gfm": "^3.0.1",
     "sass": "^1.36.0",
+    "simple-circle-timer": "^0.3.1",
     "styled-components": "^5.3.5",
     "uswds": "2.13.0",
     "yup": "^0.32.11"
