--- a/package.json
+++ b/package.json
@@ -9,102 +9,78 @@
     "url": "git+https://github.com/US-EPA-CAMD/easey-ecmps-ui.git"
   },
   "engines": {
-    "node": "16.x"
+    "node": "16.x",
+    "yarn": "1.x"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": " react-scripts build",
-    "up": "yarn --ignore-engines && yarn start",
-    "test": "react-scripts test --coverage --watchAll=false --testResultsProcessor=jest-sonar-reporter",
-    "test:dev": "react-scripts test",
-    "dev": "react-scripts start",
-    "format": "prettier --write \"src/**/*.js\" \"src/**/*.test.js\" \"src/**/*.scss\""
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "up": "yarn && yarn start"
   },
-  "resolutions": {
-    "ansi-html": "^0.0.8",
-    "ansi-regex": "^5.0.1",
-    "browserslist": "^4.16.5",
-    "glob-parent": "^5.1.2",
-    "immer": "^9.0.6",
-    "json-schema": "^0.4.0",
-    "moment": "^2.29.4",
-    "node-forge": "^1.3.0",
-    "node-notifier": "^8.0.1",
-    "nth-check": "^2.0.1",
-    "object-path": "^0.11.8",
-    "postcss": "^7.0.36",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-error-overlay": "6.0.9",
-    "react-dev-utils": "^11.0.4",
-    "serialize-javascript": "^3.1.0",
-    "set-value": "^4.0.1",
-    "shell-quote": "^1.7.3",
-    "sockjs": "^0.3.20",
-    "trim": "^0.0.3",
-    "uswds": "2.13.0",
-    "yargs-parser": "^13.1.2"
-  },
+  "resolutions": {},
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@craco/craco": "^7.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@hookform/resolvers": "^2.8.8",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/material": "^5.8.2",
-    "@mui/styled-engine-sc": "^5.8.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/react-hooks": "^8.0.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@trussworks/react-uswds": "^2.4.1",
+    "@hookform/resolvers": "^3.1.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.11.15",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
+    "@trussworks/react-uswds": "^4.1.1",
     "@us-epa-camd/easey-design-system": "1.34.5",
+    "@uswds/uswds": "^3.4.1",
     "@welldone-software/why-did-you-render": "^7.0.1",
-    "axios": "^0.21.1",
-    "axios-mock-adapter": "^1.18.2",
-    "axios-retry": "^3.1.8",
-    "dotenv": "^10.0.0",
+    "axios": "^1.3.4",
+    "axios-retry": "^3.4.0",
     "downloadjs": "^1.4.7",
-    "html-react-parser": "^1.4.4",
+    "html-react-parser": "^3.0.15",
     "js-cookie": "^3.0.1",
-    "jsonschema": "https://github.com/tdegrunt/jsonschema",
+    "jsonschema": "^1.4.1",
     "lodash": "^4.17.21",
-    "loglevel": "^1.7.0",
-    "prettier": "^2.2.1",
-    "react": "^17.0.2",
-    "react-countdown-circle-timer": "^2.5.3",
-    "react-data-table-component": "^6.11.7",
-    "react-data-table-component-extensions": "^1.5.2",
-    "react-datepicker": "^3.7.0",
-    "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
+    "loglevel": "^1.8.1",
+    "prettier": "^2.8.7",
+    "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
+    "react-data-table-component": "^7.5.3",
+    "react-data-table-component-extensions": "^1.6.0",
+    "react-datepicker": "^4.11.0",
+    "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-gtm-module": "^2.0.11",
-    "react-markdown": "^8.0.0",
-    "react-pdf": "^5.3.2",
-    "react-redux": "^7.2.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.4",
-    "react-table": "^7.5.0",
-    "redux": "^4.0.5",
+    "react-markdown": "^8.0.7",
+    "react-pdf": "^6.2.2",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
+    "redux": "^4.2.1",
     "redux-immutable-state-invariant": "2.1.0",
-    "redux-mock-store": "~1.5.4",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.4.2",
     "remark-gfm": "^3.0.1",
-    "sass": "^1.36.0",
-    "styled-components": "^5.3.5",
-    "uswds": "2.13.0",
-    "yup": "^0.32.11"
+    "sass": "^1.62.0",
+    "styled-components": "^5.3.9",
+    "url": "^0.11.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
+    "@types/react": "^18.0.37",
+    "autoprefixer": "^10.4.14",
+    "axios-mock-adapter": "^1.21.4",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
     "jest-enzyme": "^7.1.2",
     "jest-sonar-reporter": "^2.0.0",
-    "react-error-overlay": "6.0.9",
-    "react-test-renderer": "^16.13.1"
+    "react-dev-utils": "^12.0.1",
+    "react-error-overlay": "6.0.11",
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4"
   },
   "eslintConfig": {
     "extends": "react-app"
